--- a/workOut/Base.lproj/Main.storyboard
+++ b/workOut/Base.lproj/Main.storyboard
@@ -116,7 +116,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iuC-fq-Zj1">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="og_image" translatesAutoresizingMaskIntoConstraints="NO" id="iuC-fq-Zj1">
                                 <rect key="frame" x="0.0" y="148" width="375" height="268"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="268" id="BfD-16-tyO"/>
@@ -1613,7 +1613,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今日のスケジュール" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o8r-xX-9vX">
-                                <rect key="frame" x="25" y="305" width="334" height="21"/>
+                                <rect key="frame" x="25" y="380" width="334" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="tAc-vx-tu0"/>
                                 </constraints>
@@ -1636,19 +1636,25 @@
                                     <segue destination="thQ-pq-0zi" kind="show" id="yKx-7g-18k"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A7h-Wh-92t" customClass="FSCalendar">
-                                <rect key="frame" x="0.0" y="64" width="375" height="106"/>
+                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="A7h-Wh-92t" customClass="FSCalendar">
+                                <rect key="frame" x="0.0" y="64" width="375" height="241"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="375" id="Woo-ja-GWQ"/>
-                                    <constraint firstAttribute="height" constant="106" id="YEQ-j7-VZI"/>
+                                    <constraint firstAttribute="width" constant="375" id="HgU-WH-r2n"/>
+                                    <constraint firstAttribute="height" constant="241" id="P2t-Tv-UHX"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="string" keyPath="headerDateFormat" value="yyyy年MM月"/>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="eventSelectionColor">
+                                        <color key="value" red="1" green="0.32438669650000002" blue="0.92956270610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="headerTitleColor">
+                                        <color key="value" red="0.22302754823194837" green="0.24521676705015549" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01月01日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzd-fU-QJm">
-                                <rect key="frame" x="25" y="238" width="219" height="51"/>
+                                <rect key="frame" x="25" y="315" width="219" height="51"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="51" id="fKY-P7-bbW"/>
                                     <constraint firstAttribute="width" constant="219" id="mDH-75-Yx2"/>
@@ -1658,7 +1664,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今日のカロリー数" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lAk-Xb-vcb">
-                                <rect key="frame" x="25" y="351" width="334" height="31"/>
+                                <rect key="frame" x="25" y="426" width="334" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="334" id="NcW-7s-5aL"/>
                                     <constraint firstAttribute="height" constant="31" id="yVs-gI-Lyz"/>
@@ -1668,7 +1674,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今日の歩数" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yjr-GX-Lcz">
-                                <rect key="frame" x="25" y="397" width="334" height="31"/>
+                                <rect key="frame" x="25" y="472" width="334" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="31" id="PuU-kh-aCO"/>
                                     <constraint firstAttribute="width" constant="334" id="heR-LP-XSh"/>
@@ -1680,24 +1686,21 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="o8r-xX-9vX" firstAttribute="top" secondItem="tzd-fU-QJm" secondAttribute="bottom" constant="16" id="09S-Qp-qyo"/>
-                            <constraint firstItem="tzd-fU-QJm" firstAttribute="top" secondItem="A7h-Wh-92t" secondAttribute="bottom" constant="68" id="1EK-qI-MDQ"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="77d-WQ-AQX"/>
+                            <constraint firstItem="o8r-xX-9vX" firstAttribute="top" secondItem="tzd-fU-QJm" secondAttribute="bottom" constant="14" id="09S-Qp-qyo"/>
                             <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="lAk-Xb-vcb" secondAttribute="trailing" constant="16" id="JAg-UG-yS4"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" id="JwP-PJ-qC9"/>
                             <constraint firstItem="X93-aB-kt4" firstAttribute="bottom" secondItem="NZO-Ah-ZfC" secondAttribute="bottom" constant="20" id="Jwi-KY-IJj"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="KCM-et-LP5"/>
                             <constraint firstItem="tzd-fU-QJm" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="25" id="LjM-zB-bdA"/>
                             <constraint firstItem="lAk-Xb-vcb" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="25" id="MTr-3k-Kss"/>
+                            <constraint firstItem="A7h-Wh-92t" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" id="NSp-QD-pri"/>
                             <constraint firstItem="o8r-xX-9vX" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="25" id="Pzr-HV-Hln"/>
                             <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="Yjr-GX-Lcz" secondAttribute="trailing" constant="16" id="UJu-rp-eoG"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="trailing" secondItem="X93-aB-kt4" secondAttribute="trailing" id="XGL-Ny-Iqy"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="trailing" secondItem="X93-aB-kt4" secondAttribute="trailing" id="clh-2s-bJm"/>
+                            <constraint firstItem="A7h-Wh-92t" firstAttribute="trailing" secondItem="X93-aB-kt4" secondAttribute="trailing" id="an9-Ao-LiK"/>
                             <constraint firstItem="lAk-Xb-vcb" firstAttribute="top" secondItem="o8r-xX-9vX" secondAttribute="bottom" constant="25" id="dxX-gE-tnv"/>
                             <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="NZO-Ah-ZfC" secondAttribute="trailing" constant="16" id="epw-EF-Qyb"/>
+                            <constraint firstItem="tzd-fU-QJm" firstAttribute="top" secondItem="A7h-Wh-92t" secondAttribute="bottom" constant="10" id="gtQ-nk-sTZ"/>
                             <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="o8r-xX-9vX" secondAttribute="trailing" constant="16" id="j7K-gF-fzO"/>
                             <constraint firstItem="Yjr-GX-Lcz" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="25" id="k0b-Xb-Vdf"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" id="mNj-Nt-KxG"/>
+                            <constraint firstItem="A7h-Wh-92t" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="pYB-x6-dua"/>
                             <constraint firstItem="Yjr-GX-Lcz" firstAttribute="top" secondItem="lAk-Xb-vcb" secondAttribute="bottom" constant="15" id="sZP-ns-nfK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="X93-aB-kt4"/>
@@ -1965,6 +1968,7 @@
         <image name="iconmonstr-media-control-34-32" width="48" height="48"/>
         <image name="iconmonstr-menu-thin-240" width="48" height="48"/>
         <image name="iconmonstr-time-6-32" width="48" height="48"/>
+        <image name="og_image" width="1200" height="630"/>
         <image name="wmusic" width="48" height="48"/>
     </resources>
 </document>
